<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteTaker2</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_note">NoteTaker2</string>
    <string name="add_note">Add Note</string>
    <string name="back_menu_item">Back</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="teal">Teal</string>
    <string name="silver">Silver</string>
    <string name="white">White</string>
    <string name="date">Date:</string>
    <string name="delete">Delete</string>
    <string name="cream_yellow">Cream</string>
    <string name="deleteDialogMessage">Are you sure you want to delete this Note</string>
  
    

</resources>
